# Pogoda

./: CMakeLists.txt  LICENSE.txt  README.md  apiclient.cpp  apiclient.h  datamanager.cpp  datamanager.h  dataparser.cpp  dataparser.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  measurement.h  requirements.txt  station.h
html/: annotated.html  annotated_dup.js  apiclient_8h.html  apiclient_8h_source.html  class_api_client-members.html  class_api_client.html  class_api_client.js  class_data_manager-members.html  class_data_manager.html  class_data_manager.js  class_main_window.html  classes.html  datamanager_8h.html  datamanager_8h_source.html  dataparser_8h.html  dataparser_8h.js  dataparser_8h_source.html  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  hierarchy.html  hierarchy.js  mainwindow_8h.html  mainwindow_8h_source.html  measurement_8h.html  measurement_8h.js  measurement_8h_source.html  namespace_data_parser.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  station_8h.html  station_8h.js  station_8h_source.html  struct_air_quality_index-members.html  (+9 more)
html/search/: all_0.js  all_2.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_3.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_6.js  namespaces_0.js  searchdata.js
latex/: annotated.tex  apiclient_8h.tex  apiclient_8h_source.tex  class_api_client.eps  class_api_client.tex  class_data_manager.eps  class_data_manager.tex  class_main_window.tex  datamanager_8h.tex  datamanager_8h_source.tex  dataparser_8h.tex  dataparser_8h_source.tex  files.tex  hierarchy.tex  mainwindow_8h.tex  mainwindow_8h_source.tex  measurement_8h.tex  measurement_8h_source.tex  namespace_data_parser.tex  namespaces.tex  refman.tex  station_8h.tex  station_8h_source.tex  struct_air_quality_index.tex  struct_city.tex  struct_measurement_data.tex  struct_measurement_station.tex  struct_station.tex
